--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="eu.thomaskuenneth.souffleur.client">
+          package="de.thomaskuenneth.souffleur">
 
     <queries>
         <intent>
