--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,28 +2,28 @@ name: souffleur
 description: A cross platform remote control for presentations
 publish_to: 'none'
 
-version: 1.0.0+24031001
+version: 1.0.0+24052801
 
 environment:
-  sdk: ">=3.0.0 <=3.3.1"
+  sdk: ">=3.3.3"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.0
+  intl: 0.18.1
   barcode_scan2: ^4.3.0
   http: ^1.1.0
   shared_preferences: ^2.0.15
-  url_launcher: ^6.1.4
+  url_launcher: ^6.2.6
   shake: ^2.2.0
   vibration: ^1.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   generate: true
